refactor: Update data attributes for copy functionality in attachment previews

--- a/app/views/workflow_executions/attachments/_text_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_text_preview.html.erb
@@ -1,4 +1,4 @@
-<div class="hidden" data-clipboard-target="source">
+<div class="hidden" data-copy-target="source">
   <%= file.download %>
 </div>
 <pre
