refactor: Optimize file preview rendering by caching parsed contents for CSV, JSON, text, and TSV formats

--- a/app/views/workflow_executions/attachments/_csv_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_csv_preview.html.erb
@@ -1,11 +1,13 @@
+<% contents = CSV.parse(file.download, headers: true) %>
 <div class="hidden" data-copy-target="source">
-  <%= file.download %>
+  <%= contents %>
 </div>
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
   <table class="w-full text-sm text-left text-slate-500">
     <thead class="text-xs uppercase text-slate-700 bg-slate-50">
       <tr>
-        <% CSV.parse(file.download, headers: true).headers.each do |header| %>
+        <% headers = contents.headers %>
+        <% headers.each do |header| %>
           <th scope="col" class="px-6 py-3">
             <%= header %>
           </th>
@@ -13,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-      <% CSV.parse(file.download, headers: true).each do |row| %>
+      <% contents.each do |row| %>
         <tr class="bg-white border-b hover:bg-slate-50">
           <% row.each do |_header, value| %>
             <td class="px-6 py-4">
