--- a/app/views/workflow_executions/attachments/_tsv_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_tsv_preview.html.erb
@@ -1,46 +1,28 @@
+<% contents = CSV.parse(file.download, col_sep: "\t", headers: true) %>
 <div class="hidden" data-copy-target="source">
-  <%= file.download %>
+  <%= contents %>
 </div>
-<div class="overflow-x-auto">
-  <table class="min-w-full divide-y divide-slate-200 dark:divide-slate-700">
-    <thead class="bg-slate-50 dark:bg-slate-700">
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+  <table class="w-full text-sm text-left text-slate-500">
+    <thead class="text-xs uppercase text-slate-700 bg-slate-50">
       <tr>
-        <% file.open do |f| %>
-          <% headers = f.readline.strip.split("\t") %>
-          <% headers.each do |header| %>
-            <th
-              scope="col"
-              class="
-                px-6 py-3 text-xs font-medium tracking-wider text-left uppercase text-slate-500
-                dark:text-slate-400
-              "
-            >
-              <%= header %>
-            </th>
-          <% end %>
+        <% headers = contents.headers %>
+        <% headers.each do |header| %>
+          <th scope="col" class="px-6 py-3">
+            <%= header %>
+          </th>
         <% end %>
       </tr>
     </thead>
-    <tbody
-      class="
-        bg-white divide-y divide-slate-200 dark:bg-slate-800 dark:divide-slate-700
-      "
-    >
-      <% file.open do |f| %>
-        <% f.readline # Skip header row %>
-        <% f.each_line.take(100).each do |line| %>
-          <tr class="hover:bg-slate-50 dark:hover:bg-slate-700">
-            <% line.strip.split("\t").each do |cell| %>
-              <td
-                class="
-                  px-6 py-4 text-sm whitespace-nowrap text-slate-900 dark:text-slate-200
-                "
-              >
-                <%= cell %>
-              </td>
-            <% end %>
-          </tr>
-        <% end %>
+    <tbody>
+      <% contents.each do |row| %>
+        <tr class="bg-white border-b hover:bg-slate-50">
+          <% row.each do |_header, value| %>
+            <td class="px-6 py-4">
+              <%= value %>
+            </td>
+          <% end %>
+        </tr>
       <% end %>
     </tbody>
   </table>
