change hide dialog close logic; batch progress updates; add beforeunload to prevent refreshing

--- a/app/views/groups/samples/metadata/file_imports/new.turbo_stream.erb
+++ b/app/views/groups/samples/metadata/file_imports/new.turbo_stream.erb
@@ -3,4 +3,5 @@
                     locals: {
                       open: true,
                       url: group_samples_file_import_path,
+                      closable: true,
                     } %>
