--- a/app/views/groups/samples/metadata/file_imports/create.turbo_stream.erb
+++ b/app/views/groups/samples/metadata/file_imports/create.turbo_stream.erb
@@ -1,3 +1,11 @@
+<%= turbo_stream.update "samples_dialog",
+                    partial: "shared/samples/metadata/file_imports/dialog",
+                    locals: {
+                      open: true,
+                      url: group_samples_file_import_path,
+                      closable: false,
+                    } %>
+
 <%= turbo_stream.update "import_metadata_dialog_content" do %>
   <%= render Viral::ProgressBarComponent.new(items_to_complete: @samples_count) %>
 <% end %>
