--- a/app/views/projects/samples/metadata/file_imports/new.turbo_stream.erb
+++ b/app/views/projects/samples/metadata/file_imports/new.turbo_stream.erb
@@ -3,4 +3,5 @@
                     locals: {
                       open: true,
                       url: namespace_project_samples_file_import_path,
+                      closable: true,
                     } %>
