--- a/app/views/projects/samples/transfers/create.turbo_stream.erb
+++ b/app/views/projects/samples/transfers/create.turbo_stream.erb
@@ -1,3 +1,10 @@
+<%= turbo_stream.update "samples_dialog",
+                    partial: "dialog",
+                    locals: {
+                      open: true,
+                      closable: false,
+                    } %>
+
 <%= turbo_stream.update "transfer_samples_dialog_content" do %>
   <%= render Viral::ProgressBarComponent.new(items_to_complete: @samples_count) %>
 <% end %>
