--- a/app/views/shared/samples/metadata/file_imports/_dialog.html.erb
+++ b/app/views/shared/samples/metadata/file_imports/_dialog.html.erb
@@ -1,4 +1,4 @@
-<%= viral_dialog(open: open) do |dialog| %>
+<%= viral_dialog(open: open, closable: closable) do |dialog| %>
   <%= dialog.with_header(title: t(".title")) %>
   <%= dialog.with_section do %>
     <%= turbo_stream_from @broadcast_target %>
@@ -84,7 +84,6 @@
                         class: "button button--size-default button--state-primary",
                         data: {
                           "metadata--file-import-target": "submitButton",
-                          action: "click->viral--dialog#hideClose",
                         } %>
           </div>
         </div>
