--- a/app/views/projects/samples/shared/_success.html.erb
+++ b/app/views/projects/samples/shared/_success.html.erb
@@ -5,18 +5,8 @@
       justify-center mx-auto mb-3.5
     "
   >
-    <svg
-      aria-hidden="true"
-      class="w-8 h-8 text-green-500 dark:text-green-400"
-      fill="currentColor"
-      viewBox="0 0 20 20"
-      xmlns="http://www.w3.org/2000/svg"
-    ><path
-        fill-rule="evenodd"
-        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-        clip-rule="evenodd"
-      ></path></svg>
-    <span class="sr-only">Success</span>
+    <%= viral_icon(name: "check", classes: "w-8 h-8 text-green-500 dark:text-green-400") %>
+    <span class="sr-only"><%= t(".success") %></span>
   </div>
   <p class="mb-4 text-lg font-semibold text-slate-900 dark:text-white"><%= message %></p>
   <%= viral_button(state: :primary, data: { action: 'click->viral--dialog#close' }) do %>
