connect samplesheet metadata selection to header param

--- a/app/components/nextflow/samplesheet/header_component.html.erb
+++ b/app/components/nextflow/samplesheet/header_component.html.erb
@@ -34,6 +34,9 @@
                    class:
                      "bg-slate-50 text-slate-900 text-sm border-none focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-slate-700 dark:placeholder-slate-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 font-semibold tracking-wider uppercase",
                    onchange: "Turbo.navigator.submitForm(this.form)",
+                   data: {
+                     action: "change->nextflow--samplesheet#setMetadataHeader",
+                   },
                  } %>
       <% end %>
     </div>
