--- a/app/views/workflow_executions/attachments/_json_preview.html.erb
+++ b/app/views/workflow_executions/attachments/_json_preview.html.erb
@@ -3,18 +3,12 @@
   <%= contents %>
 </div>
 <div
-  class="
-    p-0 pt-6 pb-6 m-0 overflow-x-auto rounded-lg bg-slate-50 dark:bg-slate-900
-    dark:text-slate-300
-  "
+  class="p-0 pt-6 pb-6 m-0 overflow-x-auto text-sm rounded-lg  bg-slate-50 dark:bg-slate-900 dark:text-slate-300"
 >
   <% JSON.pretty_generate(JSON.parse(contents)).lines.each_with_index do |line, index| %>
     <pre class="flex dark:text-slate-400">
       <span
-        class="
-          w-12 pr-2 text-right border-r select-none min-w-12 text-slate-400
-          dark:text-slate-600 border-slate-200 dark:border-slate-700
-        "
+        class="w-12 pr-2 text-right border-r select-none  min-w-12 text-slate-400 dark:text-slate-600 border-slate-200 dark:border-slate-700"
       ><%= index + 1 %></span>
       <span class="pl-4 text-wrap"><%= line %></span>
     </pre>
